ILA/2017.1/FiltroFir/project_1/project_1.sdk/.metadata/.plugins/org.eclipse.cdt.ui/FirBareMetal.build.log
10:57:22 **** Auto Build of configuration Debug for project FirBareMetal ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../FirBareMetal_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/helloworld.c:51:0:
../src/helloworld.c: In function 'main':
../../FirBareMetal_bsp/ps7_cortexa9_0/include/FirAxi.h:37:4: warning: implicit declaration of function 'Xil_Out32' [-Wimplicit-function-declaration]
    Xil_Out32((BaseAddress) + (RegOffset), (u32)(Data))
    ^
../src/helloworld.c:63:5: note: in expansion of macro 'FIRAXI_mWriteReg'
     FIRAXI_mWriteReg(BaseAddress, 0,coeff_0);
     ^~~~~~~~~~~~~~~~
../src/helloworld.c:63:22: error: 'BaseAddress' undeclared (first use in this function)
     FIRAXI_mWriteReg(BaseAddress, 0,coeff_0);
                      ^
../../FirBareMetal_bsp/ps7_cortexa9_0/include/FirAxi.h:37:15: note: in definition of macro 'FIRAXI_mWriteReg'
    Xil_Out32((BaseAddress) + (RegOffset), (u32)(Data))
               ^~~~~~~~~~~
../src/helloworld.c:63:22: note: each undeclared identifier is reported only once for each function it appears in
     FIRAXI_mWriteReg(BaseAddress, 0,coeff_0);
                      ^
../../FirBareMetal_bsp/ps7_cortexa9_0/include/FirAxi.h:37:15: note: in definition of macro 'FIRAXI_mWriteReg'
    Xil_Out32((BaseAddress) + (RegOffset), (u32)(Data))
               ^~~~~~~~~~~
../src/helloworld.c:69:11: error: too many arguments to function 'sin'
      data=sin((i/180)*3,14);
           ^~~
In file included from ../src/helloworld.c:52:0:
c:\xilinx\sdk\2017.1\gnu\aarch32\nt\gcc-arm-none-eabi\arm-none-eabi\libc\usr\include\math.h:111:15: note: declared here
 extern double sin _PARAMS((double));
               ^~~
In file included from ../src/helloworld.c:51:0:
../../FirBareMetal_bsp/ps7_cortexa9_0/include/FirAxi.h:57:5: warning: implicit declaration of function 'Xil_In32' [-Wimplicit-function-declaration]
     Xil_In32((BaseAddress) + (RegOffset))
     ^
../src/helloworld.c:74:6: note: in expansion of macro 'FIRAXI_mReadReg'
      FIRAXI_mReadReg(BaseAddress, 20)
      ^~~~~~~~~~~~~~~
../src/helloworld.c:76:5: error: expected ';' before '}' token
     }
     ^
make: *** [src/helloworld.o] Error 1

10:57:22 Build Finished (took 614ms)

